# Simple-Discord-Chat-Bot

./: .gitignore  README.md  TODO.md  chat.py  cot.py  main.py  pyproject.toml  readme.md  requirements.txt  start.sh  tools.py
config/: default.env  personality.json
config/images/: 1930s.xcf  anime.xcf  comedian.xcf  dr.xcf  fiend.xcf  friend.xcf  imposter.xcf  pirate.xcf  rapper.xcf  wizard.xcf  youtuber.xcf
